# 8080-Emulator

./: .gitattributes  .gitignore  CMakeLists.txt  README.MD  build.bat  build.sh  clean.bat  clean.sh
dev_tests/: README.md
dev_tests/functional_tests/: io_functional_tests.cpp  memory_functional_tests.cpp  romloader_functional_tests.cpp
dev_tests/integration_tests/component_links/: romloader_to_memory_tests.cpp
dev_tests/integration_tests/system_level/: full_system_emulation_tests.cpp
dev_tests/manual_tests/: monitor_vram_tests.cpp
dev_tests/output/: output.txt
dev_tests/support/: test_utils.hpp
dev_tests/test_data/: test_data.txt
dev_tests/unit_tests/: cpu_a_opcodes_test.cpp  cpu_arithmetic_unit_tests.cpp  cpu_c_opcodes_tests.cpp  cpu_d_opcodes_tests.cpp  cpu_data_transfer_unit_tests.cpp  cpu_logic_unit_tests.cpp  cpu_mov_opcodes_tests.cpp  cpu_stack_unit_tests.cpp  io_unit_tests.cpp  memory_unit_tests.cpp  romloader_unit_tests.cpp
docs/: README.md  architecture.md  controller.md  cpu_module.md  dev_notes.md  display_renderer.md  integration.md  io_ports.md  memory_module.md  rom_compatibility.md  romloader_module.md  test_utils.md  testing.md  video_module.md
docs/diagrams/: SpaceInvadersArchitecture.puml  SpaceInvadersEmulatorArchitecture_v2.drawio  SpaceInvadersSequence.puml
src/: CMakeLists.txt  cli_runner.cpp  main.cpp
src/controller/: CMakeLists.txt  README.md  README.me  SoundManager.cpp  SoundManager.hpp  controller.cpp  controller.hpp  controller_main.cpp
src/disassembler/: CMakeLists.txt  disassembler.cpp  disassembler.hpp  disassembler_main.cpp
src/model/: CMakeLists.txt  README.md  emulator.cpp  emulator.hpp  emulator_main.cpp  memory.cpp  memory.hpp  romloader.cpp  romloader.hpp
src/view/: CMakeLists.txt  README.md  common_frame_cfg.h  frame_buffer_tester.cpp  frame_buffer_tester.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  view.hpp  view_main.cpp
tools/test_frame_generator/: test_frame_generator.py
